update and add index file

--- a/_source/scss/tools/_extends.scss
+++ b/_source/scss/tools/_extends.scss
@@ -1,44 +1,1 @@
-.extend__title {
-  position: relative;
-  margin-bottom: $siteMarginBottom;
-  font-weight: 400;
-  text-transform: uppercase;
-
-  &:after {
-    content: '';
-    background: $colorPrimary;
-    position: absolute;
-    left: 0;
-    bottom: - ( $siteMarginBottom / 2 );
-    width: 50px;
-    height: 2px;
-  }
-}
-
-.extend__hover-line {
-  display: inline-block;
-  position: relative;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: inherit;
-
-  &:after {
-    content: '';
-    background: $colorPrimary;
-    position: absolute;
-    left: 0;
-    bottom: -5px;
-    width: 0;
-    height: 2px;
-    transition: width .2s ease;
-  }
-
-  &:hover:after {
-    width: 100%;
-  }
-
-  &.is-active:after,
-  &.current-lang:after {
-    width: 100%;
-  }
-}
+// extends
